# jni-cpp-testing

./: .gitignore  CMakeLists.txt  README.md
.github/: build.yml
.github/workflows/: build_cpp.yml
cpp-jni-implementation/: CMakeLists.txt
cpp-jni-implementation/.github/: build.yml
cpp-jni-implementation/src/: jni_api.h  library.h
src/: jni_api.h  library.cpp  library.h
